--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -3,16 +3,21 @@
     package="com.rmielnik.demo">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.rmielnik.demo.MainActivity">
+
+        <activity android:name=".sampleCallbacks.CallbacksActivity" />
+        <activity android:name=".sampleCounter.CounterActivity" />
+        <activity android:name=".sampleCustomAdapter.CustomAdapterClassActivity" />
+        <activity android:name=".sampleViewHolderFactoryRegistry.ViewHolderFactoryRegistryActivity" />
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
